--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-streamlit>=1.26.0
-python-dotenv>=1.0.0
-langchain>=0.3.0
-langchain-huggingface>=0.2.2
-langchain-google-genai>=0.0.5
-langchain-community>=0.1.9
-pinecone-client>=2.2.0
-langchain-pinecone>=0.2.12
-pydantic<2.1
-sentence-transformers>=2.2.2
+streamlit==1.49.1
+python-dotenv==1.1.1
+langchain==0.3.27
+langchain-huggingface==0.3.1
+langchain-google-genai==2.1.12
+langchain-community==0.3.29
+pinecone-client==6.0.0
+langchain-pinecone==0.2.12
+sentence-transformers==5.1.1
